9 Update GitHub Actions workflow with latest versions and modern syntax

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/A_folio/" />
     <title>Aleena Tahir | Portfolio</title>
     <meta name="description" content="Aleena Tahir - Artificial Intelligence Student & Developer Portfolio" />
     <meta name="author" content="Aleena Tahir" />
